<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cloud Full Sync</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nil">NULL</string>
    <string name="fileName"></string>
    <string name="count">0 items</string>
    <string name="TextViewDate">01 I 1970</string>
    <string name="whatToDo">What do You want to do?</string>
    <string name="fileExpl">Explore files</string>
    <string name="title_file_explorer_activity">File Explorer</string>
    <string name="title_select_file_activity">Select File/Folder</string>
    <string name="properties">Properties</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="move">Move</string>
    <string name="preview">Preview</string>
    <string name="copy">Copy to..</string>
    <string name="input_dialog_head">Input dialog</string>
    <string name="input_dialog_body">Put answer</string>
    <string name="new_folder">New Folder</string>
    <string name="new_file">New file</string>
    <string name="creating_new_file">Creating new file</string>
    <string name="creating_new_folder">Creating new folder</string>
    <string name="binding">Open binding</string>
    <string name="select_file">Select file</string>
    <string name="select_folder">Select folder</string>
    <string name="title_activity_binding">Binding</string>
    <string name="button">Button</string>
    <string name="cloud_path">Cloud path:</string>
    <string name="local_path">Local path:</string>
    <string name="description">description</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="deactivate">Deactivate</string>
    <string name="activate">Activate</string>
    <string name="select">Select</string>
    <string name="deleting_">Deleting&#8230;</string>
    <string name="cannot_rename">Cannot rename</string>
    <string name="are_you_sure_to_delete">"Are You sure to delete?"</string>
    <string name="renaming_">Renaming&#8230;</string>
    <string name="type_new_name">Type new name:</string>
    <string name="do_not_go_up">Do not go up, it\'s root of directory tree.</string>
    <string name="sync">Sync</string>
    <string name="notifications">Notifications</string>
    <string name="active">Active</string>
    <string name="frequency">Frequency</string>
    <string name="data">Data</string>
    <string name="set_local_folder">Set local folder</string>
    <string name="set_cloud_folder">Set cloud folder</string>
    <string name="frequency_of_sync">Frequency of sync</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="preference_local_path">preference_local_path</string>
    <string name="preference_cloud_path">preference_cloud_path</string>
    <string name="preference_frequency">preference_frequency</string>
    <string name="preference_active">preference_active</string>
    <string name="title_binding_preference">Settings</string>
    <string name="save">Save</string>
    <string name="cloud_path_title">Cloud:</string>
    <string name="local_path_title">Local:</string>
    <string name="add_new_binding_text">Add new binding</string>
    <string name="add_bind_text">Add bind</string>
    <string name="none">none</string>
    <string name="direction_of_sync">Set direction of synchronize</string>
    <string name="preference_direction">preference_direction</string>
    <string name="direct_of_sync">Type direction</string>
    <string name="threedot">&#8230;</string>
    <string name="managing_accounts">Managing accounts</string>
    <string name="title_activity_add_binding">AddBindingActivity</string>

</resources>