<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/del"
        android:icon="@drawable/trash"
        android:menuCategory="container"
        android:orderInCategory="1"
        android:title="@string/delete"
        android:titleCondensed="@string/delete">
    </item>
    <item
        android:id="@+id/move"
        android:menuCategory="container"
        android:orderInCategory="2"
        android:title="@string/move">
    </item>
    <item
        android:id="@+id/rename"
        android:menuCategory="container"
        android:orderInCategory="3"
        android:title="@string/rename">
    </item>
    <item
        android:id="@+id/copy"
        android:menuCategory="container"
        android:orderInCategory="4"
        android:title="@string/copy">
    </item>
    <item
        android:id="@+id/prop"
        android:menuCategory="container"
        android:orderInCategory="5"
        android:title="@string/properties">
    </item>

</menu>