<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.google.ads.AdView
        android:id="@+id/adView_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admobID"
        ads:loadAdOnCreate="true"
        ads:refreshInterval="31" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whatToDo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="28sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="runFileExplorator"
        android:text="@string/fileExpl" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="runBinding"
        android:text="@string/binding" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="runManagingAccounts"
        android:text="@string/managing_accounts" />

</LinearLayout><!-- ads:testDevices="1AA5B157B97C0DA348F87927C5BF4B77" -->
