<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+bindItemLayout/source_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"
        android:maxHeight="40dp"
        android:maxWidth="40dp" />

    <LinearLayout
        android:id="@+bindItemLayout/linearInBindItemLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+bindItemLayout/source_icon"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_path_title" />

            <TextView
                android:id="@+bindItemLayout/bind_local_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local_path" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloud_path_title" />

            <TextView
                android:id="@+bindItemLayout/bind_cloud_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloud_path" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+bindItemLayout/direct_sync_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/description"
        android:maxHeight="40dp"
        android:maxWidth="40dp" />

</RelativeLayout>