<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.google.ads.AdView
        android:id="@+id/adView_fileexplorer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admobID"
        ads:loadAdOnCreate="true"
        ads:refreshInterval="31"
         />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onUpClick" >

        <ImageView
            android:id="@+id/up_img"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:contentDescription="@string/preview" >
        </ImageView>

        <TextView
            android:id="@+id/up_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="5dip"
            android:layout_toRightOf="@+id/up_img"
            android:singleLine="true"
            android:text="@string/fileName"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/up_folder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/up_name"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/up_img"
            android:text="@string/count" >
        </TextView>
    </RelativeLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>

<!-- ads:testDevices="1AA5B157B97C0DA348F87927C5BF4B77" -->
